fix: Homepage left-aligned
whoops, should've tested for that! i was kinda focused on mobile
lol

--- a/sass/home_page.scss
+++ b/sass/home_page.scss
@@ -27,6 +27,7 @@ $max_width: 42em;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-content: center;
 }
 
 .sect-div {
